--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,13 @@
-name: Test and Check
+name: Run Unit and Integration Tests
 
 on:
     pull_request:
         branches:
             - main
+            - next
     push:
-        branches-ignore:
-            - main
+    workflow_dispatch:
+    workflow_call:
 
 permissions:
     contents: read
@@ -61,13 +62,3 @@ jobs:
 
             - name: Run E2E tests
               run: mise run test-e2e
-
-            - name: Upload test results
-              if: always()
-              uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
-              with:
-                  name: test-results
-                  path: |
-                      test-results/
-                      playwright-report/
-                  retention-days: 30
