--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,11 @@ jobs:
     release:
         name: Create Release
         needs: [build-and-package, test, release_type]
+        permissions:
+            actions: read
+            attestations: write
+            contents: write
+            id-token: write
         if: success() && needs.release_type.outputs.release_type != 'none'
         uses: ./.github/workflows/release.yaml
         with:
