ci: allow the release workflow to be callable

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,7 @@
-name: Manual Dev Pre-Release
+name: Release Workflow
 
 on:
+    workflow_dispatch:
     workflow_call:
         inputs:
             artifact_id:
